--- a/client/src/grid.css
+++ b/client/src/grid.css
@@ -42,6 +42,8 @@ body {
   border: 0.5px solid white;
   padding: 1%;
   height: 100%;
-  width: 25%;
+  width: 23%;
+  margin-right: 1%;
+  margin-left: 1%;
   float: left;
 }
