Add table to weather forecast, indoor and outdoor and fix bug in quotes widget

--- a/client/src/custom.css
+++ b/client/src/custom.css
@@ -10,6 +10,19 @@
   font-size: 12px;
 }
 
+.weather-container table {
+  width: 100%;
+
+}
+
+.weather-container td, th {
+  text-align: center;
+}
+
+#head-border {
+    color: red;
+}
+
 .todo-container {
   font-size: 12px;
 }
