Add Iconography for weather widgets

--- a/client/src/font/css/custom.css
+++ b/client/src/font/css/custom.css
@@ -7,12 +7,12 @@
 }
 
 .weather-container {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .weather-container table {
   width: 100%;
-
+  color: white;
 }
 
 .weather-container td, th {
