Added QR Code feature

--- a/client/src/font/css/custom.css
+++ b/client/src/font/css/custom.css
@@ -26,3 +26,17 @@
 .todo-container {
   font-size: 12px;
 }
+
+.qrcode-container {
+  width: 10%;
+}
+
+.qrcode-description {
+  text-align: center;
+  color: white;
+  font-size: 0.75vw;
+}
+
+.qrcode-image {
+  background: white;
+}
