--- a/client/src/font/css/grid.css
+++ b/client/src/font/css/grid.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
 * {
   box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
 }
 
 body {
