--- a/client/src/font/css/grid.css
+++ b/client/src/font/css/grid.css
@@ -31,7 +31,7 @@ body {
   top: 0;
   height: 25%;
   width: 100%;
-  margin-top: 1%;
+  margin-top: 5%;
 }
 
 .lower-row {
@@ -43,7 +43,7 @@ body {
 }
 
 #widget {
-  border: 0.5px solid white;
+  /* border: 0.5px solid white; */
   padding: 1%;
   height: 100%;
   width: 23%;
