--- a/client/src/font/css/grid.css
+++ b/client/src/font/css/grid.css
@@ -44,6 +44,7 @@ body {
 
 #widget {
   /* border: 0.5px solid white; */
+border: 0.5px solid white;
   padding: 1%;
   height: 100%;
   width: 23%;
