--- a/client/src/font/css/custom.css
+++ b/client/src/font/css/custom.css
@@ -1,37 +1,37 @@
 .quotes-container {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 .clock-container {
-  text-align: center;
+    text-align: center;
 }
 
 #clock {
-  font-size: 4vw;
+    font-size: 4vw;
 }
 
 li {
-  list-style-type: square;
-  list-style-position: inside;
+    list-style-type: square;
+    list-style-position: inside;
 }
 
 .weather-container {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 #weather-city {
-  font-size: 1.5vw;
-  display: inline-block;
-  margin-bottom: 2%;
+    font-size: 1.5vw;
+    display: inline-block;
+    margin-bottom: 2%;
 }
 
 .weather-container table {
-  width: 100%;
-  color: white;
+    width: 100%;
+    color: white;
 }
 
 .weather-container td, th {
-  text-align: center;
+    text-align: center;
 }
 
 #head-border {
@@ -39,62 +39,65 @@ li {
 }
 
 .todo-container {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 #todo-title {
-  font-size: 1.5vw;
-  display: inline-block;
-  margin-bottom: 2%;
+    font-size: 1.5vw;
+    display: inline-block;
+    margin-bottom: 2%;
 }
 
 #todo-items {
-  text-indent: 1em;
+    text-indent: 1em;
 }
 
-.news-container {
-  font-size: 14px;
+#news-feed-container {
+    font-size: 14px;
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
 }
 
-#news-title {
-  font-size: 1.5vw;
-  display: inline-block;
-  margin-bottom: 2%;
+#news-feed-list {
+    padding-left: 0;
 }
 
-#news-items {
-  text-indent: 1em;
+.news-feed-item {
+    list-style-type: none;
+    float: left;
 }
 
 
 .qr-screen {
-  margin-top: 10%;
-  margin-left: 10%;
-  margin-right: 5%;
-  width:100%;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  font-size: 12px;
-  list-style-type: circle;
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-right: 5%;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    list-style-type: circle;
 }
 
 #qrcode-container {
-  float:left;
-  width: 25%;
+    float: left;
+    width: 25%;
 }
 
 #qrcode-description {
-  text-align: center;
-  color: white;
-  font-size: 2.4vw;
+    text-align: center;
+    color: white;
+    font-size: 2.4vw;
 }
 
 #qrcode-image {
-  background: white;
+    background: white;
 }
 
 #qrcode-container::after {
@@ -102,13 +105,13 @@ li {
 }
 
 .qr-screen #qr-time-container {
-  display: table;
-  margin: 0 auto;
-  font-size: 7vw;
+    display: table;
+    margin: 0 auto;
+    font-size: 7vw;
 }
 
 .faceIdMessage {
-  color: white;
-  text-align: center;
-  font-size: 1.5vw;
+    color: white;
+    text-align: center;
+    font-size: 1.5vw;
 }
