--- a/client/src/font/css/grid.css
+++ b/client/src/font/css/grid.css
@@ -39,15 +39,15 @@ body {
   bottom: 0;
   height: 25%;
   width: 100%;
-  margin-bottom: 1%;
+  margin-bottom: 0;
 }
 
 #widget {
   /* border: 0.5px solid white; */
-  padding: 1%;
+  padding: 0%;
   height: 100%;
-  width: 23%;
-  margin-right: 1%;
-  margin-left: 1%;
+  width: 17%;
+  margin-right: 4%;
+  margin-left: 4%;
   float: left;
 }
