--- a/client/src/font/css/grid.css
+++ b/client/src/font/css/grid.css
@@ -32,22 +32,26 @@ body {
   height: 25%;
   width: 100%;
   margin-top: 5%;
+  margin-right: 4%;
+  margin-left: 3%;
 }
 
 .lower-row {
   position: fixed;
-  bottom: 0;
-  height: 25%;
+  bottom: -1%;
+  height: 20%;
   width: 100%;
   margin-bottom: 0;
+  margin-right: 4%;
+  margin-left: 2%;
+
 }
 
 #widget {
-  /* border: 0.5px solid white; */
   padding: 0%;
-  height: 100%;
-  width: 17%;
-  margin-right: 4%;
-  margin-left: 4%;
+  height: 80%;
+  width: 23%;
+  margin-right: 0.5%;
+  margin-left: 0.5%;
   float: left;
 }
