--- a/client/src/font/css/custom.css
+++ b/client/src/font/css/custom.css
@@ -51,7 +51,7 @@ li {
     margin: 0 auto;
     height: 100%;
     width: 100%;
-    overflow: auto;
+    overflow: hidden;
     margin-top: 30px;
 }
 
